# tree-sitter-adl

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  debug.adl  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
adl/: debug.adl
bindings/c/: tree-sitter-adl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_adl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAdlTests/: TreeSitterAdlTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: doccomments-with-annotations.txt  doccomments.txt  empty.txt  gnarly.txt  imports.txt  json.txt  remote-field-annotations.txt  struct.txt  union.txt  user-defined-fields.txt
test/corpus/partials/: partial-imp.txt  partial-import-000.txt  partial-import-001.txt  partial-import-002.txt
test/corpus/protoapp/: db.txt
test/corpus/protoapp/common/: db.txt
test/corpus/unit/: 000-empty.txt  001-module.txt  002-imports.txt  003-typedefs.txt  004-annotations-module.txt  005-typedefs-with-fields.txt  006-type-expressions.txt  007-kitchen-sink.txt  008-json.txt  009-remote-field-annotations.txt
